# cpp_patterns

./: CMakeLists.txt  README.md  pimpl_test.cpp  pimpl_widget.cpp  pimpl_widget.h  test_assign_operator.cpp  test_barton_nackman.cpp  test_dynamic_cast.cpp  test_equal_operator.cpp  test_fold_expression.cpp  test_forward.cpp  test_initlizer_list.cpp  test_lambda_capture.cpp  test_member_init.cpp  test_move.cpp  test_non_virtual_destructor.cpp  test_not_null.cpp  test_parameter_pack.cpp  test_pure_functions.cpp  test_rvalue_ref.cpp  test_rvalue_ref2.cpp  test_rvalue_template.cpp  test_span.cpp  test_struct_capture.cpp  test_swap.cpp  test_template_duck_typping.cpp  test_template_duck_typping2  test_unique_ptr.cpp  test_vector_swap.cpp
